<resources>
    <string name="app_name">Remove It</string>
    <string name="remove_me">Remove It</string>
    <string name="image">image</string>
    <string name="select_image">Select\nImage</string>
    <string name="saved_images">Saved Images</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="help">Help</string>
    <string name="app_settings">App Settings</string>
    <string name="share">Share</string>
    <string name="buy_credits">Buy Credits</string>
    <string name="image_saved">Image Saved</string>
    <string name="magic">Magic</string>
    <string name="eraser">Eraser</string>
    <string name="mirror">Mirror</string>
    <string name="adjust">Adjust</string>
    <string name="crop_image">Crop Image</string>
    <string name="easily_crop_image">Easily Crop Image</string>
    <string name="magicc">Magic!</string>
    <string name="remove_background_easily">Remove Background Easily</string>
    <string name="share_image">Share\nImage</string>
    <string name="get_more_credits">Get More Credits</string>
    <string name="welcome">Welcome,</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="free_credits">Free Credits</string>
    <string name="edit_more">Edit More</string>
    <string name="credits">Credits:</string>
    <string name="_5">5</string>
    <string name="app_may_need_restart_to_update_credits">App may need restart to update Credits.</string>
    <string name="how_to_use">How to use</string>
    <string name="zoom_and_adjust">Zoom And Adjust</string>
    <string name="mirror_effect">Mirror Effect</string>
    <string name="manual_unerase">Manual Unerase</string>
    <string name="magic_eraser">Magic Eraser</string>
    <string name="manual_erase">Manual Erase</string>
    <string name="ok">OK</string>
    <string name="super_tridents">Super Tridents</string>
    <string name="save_to_device">Save To Device</string>

</resources>