<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ShareActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center|center_horizontal">

            <ImageView
                android:id="@+id/saveDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shareimage"
                app:srcCompat="@drawable/ic_save2" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/save_to_device"
                android:textColor="@color/my_statusbar_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/saveDevice"
                app:layout_constraintStart_toStartOf="@+id/saveDevice"
                app:layout_constraintTop_toBottomOf="@+id/saveDevice" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewshare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="50dp"
                android:foregroundGravity="bottom"
                app:adSize="SMART_BANNER"
                app:adUnitId="ca-app-pub-5324429581828078/7867287086"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27"
                app:layout_constraintVertical_bias="0.0">

                <androidx.cardview.widget.CardView
                    android:id="@+id/editcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/ripple"
                    app:cardBackgroundColor="@color/my_statusbar_color"
                    app:cardCornerRadius="40dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="130dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView30"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_edit" />

                        <TextView
                            android:id="@+id/textView220"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/edit_more"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/imageView30"
                            app:layout_constraintStart_toStartOf="@+id/imageView30"
                            app:layout_constraintTop_toBottomOf="@+id/imageView30" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/ripple"
                    app:cardBackgroundColor="@color/my_statusbar_color"
                    app:cardCornerRadius="40dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="130dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="casual"
                            android:gravity="center"
                            android:text="@string/share"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/sharebtnn"
                            app:layout_constraintStart_toStartOf="@+id/sharebtnn"
                            app:layout_constraintTop_toBottomOf="@+id/sharebtnn" />

                        <ImageView
                            android:id="@+id/sharebtnn"
                            android:layout_width="100dp"
                            android:layout_height="70dp"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_share" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <ImageView
                android:id="@+id/homebtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_home" />

            <ImageView
                android:id="@+id/shareimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/background_image"
                android:contentDescription="@string/image"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="casual"
                android:text="@string/image_saved"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/homebtn"
                app:layout_constraintStart_toEndOf="@+id/backbtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/backbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>